# digiqual

./: .gitignore  .nojekyll  404.html  CITATION.cff  LICENCE  MANIFEST.in  Makefile  README.md  _quarto.yml  custom.scss  index.html  index.qmd  justfile  mkdocs.yml  objects.inv  pyproject.toml  robots.txt  run_app.py  search.json  sitemap.xml  windows_build.txt
.devcontainer/: Dockerfile  devcontainer.json
.streamlit/: config.toml
api_reference/: adaptive.generate_targeted_samples.html  adaptive.run_adaptive_search.html  ahat.bootstrap_linear_pod_ci.html  ahat.compute_linear_pod_curve.html  ahat.fit_linear_a_hat_model.html  ahat.plot_linear_signal_model.html  core.SimulationStudy.html  diagnostics.ValidationError.html  diagnostics.sample_sufficiency.html  diagnostics.validate_simulation.html  digiqual.core.SimulationStudy.add_data.html  digiqual.core.SimulationStudy.compute_pod_spectrum.html  digiqual.core.SimulationStudy.diagnose.html  digiqual.core.SimulationStudy.estimate_compute_time.html  digiqual.core.SimulationStudy.get_data_summary.html  digiqual.core.SimulationStudy.get_unassigned_parameters.html  digiqual.core.SimulationStudy.linear_pod.html  digiqual.core.SimulationStudy.optimise.html  digiqual.core.SimulationStudy.plot_collinearity.html  digiqual.core.SimulationStudy.plot_pod_vs_threshold.html  digiqual.core.SimulationStudy.pod.html  digiqual.core.SimulationStudy.refine.html  digiqual.core.SimulationStudy.update_slice.html  digiqual.core.SimulationStudy.validate.html  digiqual.core.SimulationStudy.visualise.html  dq_ui.html  executors.CLIExecutor.html  executors.Executor.html  executors.MatlabExecutor.html  executors.PythonExecutor.html  index.html  integration.compute_multi_dim_pod.html  plotting.plot_collinearity_matrix.html  plotting.plot_pod_curve.html  plotting.plot_pod_surface.html  plotting.plot_signal_model.html  plotting.plot_signal_surface.html  pod.bootstrap_pod_ci.html  pod.calculate_reliability_point.html  pod.calculate_sobol_indices.html  (+10 more)
app/: Home.py  app.py  initial_data.csv  main.py  pyproject.toml  run_app.py  sufficient_data.csv  utils.py
app/pages/: 1_Design.py  2_Validate.py  3_Analyse.py
docs/: caching.html  caching.qmd  comparison.html  comparison.qmd  function.html  function.qmd  generalised_pod.html  generalised_pod.qmd  gui.html  gui.qmd  gui_manual.html  gui_manual.qmd  index.md  install.html  install.qmd  optimisation.html  optimisation.qmd  qs_class.html  qs_class.qmd  quick_start.md  quick_start_function.html  quick_start_function.md  quick_start_function.qmd  quick_start_oop.html  quick_start_oop.md  quick_start_oop.qmd  reference.md
optimise_examples/: demo_cli.py  demo_matlab.py  demo_python.py  dummy_fea.py  dummy_matlab_solver.m
quick_start/: index.html
quick_start_function/: index.html
quick_start_oop/: index.html
reference/: index.html
scripts/: bump_version.py  demo_optimise.py  evaluate_batch_example.py  example.py  example_SimulationStudy.py  example_noise.py  generate_hero_image.py  high-dimension.py  kriging_run.py  make_fake_data.py  multi.py  solver.py
tests/: test_adaptive_edge_cases.py  test_ahat.py  test_check_sample_sufficiency.py  test_core.py  test_diagnostics.py  test_executors.py  test_generate_lhs.py  test_generate_targeted_samples.py  test_init.py  test_integration.py  test_lhs_design.py  test_non_uniform_integration.py  test_plotting.py  test_pod.py  test_run_adaptive_search.py  test_sample_sufficiency.py  test_sampling.py  test_validate_simulation.py  test_validation.py
(+25 files in other folders)
