[project]
name = "digiqual"
version = "0.9.0"
description = "Statistical Toolkit for Reliability Assessment in NDT"
authors = [
  {name = "Josh Tyler", email = "josh.tyler@bristol.ac.uk"}
]

readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

# Core statistical and data dependencies
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scipy>=1.13.1",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.9.4",
    "requests>=2.32.5",
    "statsmodels>=0.14.6",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"


[project.optional-dependencies]
# Group for the Shiny-based desktop application
gui = [
    "jinja2>=3.1.6",
    "shiny>=1.5.1",
    "shinyswatch",
    "faicons",
]
# Development and documentation tools
dev = [
    "pytest>=8.4.2",
    "quartodoc",
    "jupyter",
    "nbformat",
    "pyinstaller",
    "pywebview"
]
