[project]
name = "digiqual"
version = "0.10.5"
description = "Statistical Toolkit for Reliability Assessment in NDT"
authors = [
  {name = "Josh Tyler", email = "josh.tyler@bristol.ac.uk"}
]

readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://jgibristol.github.io/digiqual/"
Source = "https://github.com/JGIBristol/digiqual"




license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scipy>=1.13.1",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.9.4",
    "requests>=2.32.5",
    "statsmodels>=0.14.6",
    "shiny",
    "shinyswatch",
    "faicons",
    "pywebview",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"app" = "digiqual/app"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "quartodoc",
    "jupyter",
    "nbformat",
    "pyinstaller",
    "pywebview"
]
